--- a/index.ipynb
+++ b/index.ipynb
@@ -147,13 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Upper= \"Ceo\" # 'CEO'"
+    "Upper= \"Ceo\" "
    ]
   },
   {
