--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".contains # False"
+    "\"art.vandelay@vandelay.co\".contains (\".com\"# False"
    ]
   },
   {
