--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "\"www.\"a'vandelay.com' # 'www.vandelay.com'"
+    "\"www.\"and'vandelay.com' "
    ]
   },
   {
