--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -199,10 +199,10 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.com'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
