--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".contains (\".com\")"
+    "\"art.vandelay@vandelay.co\".endswith()"
    ]
   },
   {
