Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -147,22 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.upper>"
+       "'CEO'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\".upper"
+    "\"Ceo\".upper()"
    ]
   },
   {
